[Frontend][Basket]: Change CreateBasket & refacto api
